--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -26,3 +26,4 @@ html
             small &copy; Simon Holmes 2014
     script(src='/javascripts/jquery-3.1.1.js')
     script(src='/bootstrap/js/bootstrap.min.js')
+    script(src='/javascripts/validation.js')
